--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,7 @@
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
 	box-shadow: 0 1px 2px rgba(0,0,0,.15);
 	}
+
+.error { color: #DD0000; }
+
+.form-error{ color: red; padding: 0 5px; clear: left }
