--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,34 @@
-<p>Hello <%= @resource.email %>!</p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>eSpace</title>
+   
+  
+  <style type="text/css">
+  
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+  body{ font-size:16px; margin:0; line-height:20px }
+  .left{ margin:50px 0 0 0; font-family:logo; font-size:40px; color:#0055a2; line-height:normal}
+  .right{ margin:0 0 20px 0; width:auto; float:right; text-align:right; font-family:"Times New Roman", Times, serif; font-size:14px; color:#000000}
+  
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+  </style>
+
+   
+  </head>
+
+  <body>
+
+	<p>Hello <%= @resource.email %>!</p>
+
+	<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+
+	<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+	<p>If you didn't request this, please ignore this email.</p>
+	<p>Your password won't change until you access the link above and create a new one.</p>
+
+  </body>
+</html>
