--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,5 +6,7 @@
   <% else %>
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
     <li> <%= link_to 'Sign up', new_user_registration_path %> </li>
+    <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">facebook<i class="fa fa-facebook"></i></a></li>
+
   <% end %>
 </ul>
