--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,8 +2,13 @@
 
 <ul class="nav">
  
-  <% if user_signed_in? %>
+  <% if user_signed_in? && signed_in? && current_user.admin?  %>
+    <li><%= link_to "Users", root_path%></li>
+    <li><%= link_to "Page1", root_path%></li>
+    <li><%= link_to "Page2", root_path%></li>
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
+    <%elsif user_signed_in? %>
+     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <% else %>
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
     <li> <%= link_to 'Sign up', new_user_registration_path %> </li>
