--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,10 +4,11 @@
  
   <% if user_signed_in? && signed_in? && current_user.admin?  %>
     <li><%= link_to "Users", root_path%></li>
-    <li><%= link_to "Page1", root_path%></li>
+   
     <li><%= link_to "Page2", root_path%></li>
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
     <%elsif user_signed_in? %>
+     <li><%= link_to "Personal Information", personal_information_path%></li>
      <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <% else %>
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
