--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,13 @@
-<%= link_to "College App", root_path, :class => 'brand' %>
+<%= link_to "Store Finding System", root_path, :class => 'brand' %>
 <ul class="nav">
  
   <% if user_signed_in? %>
+  	<li> <%= link_to 'My Post', posts_path %> </li>
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <% else %>
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
     <li> <%= link_to 'Sign up', authenticates_path %> </li>
-    <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">facebook<i class="fa fa-facebook"></i></a></li>
+    <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">Facebook<i class="fa fa-facebook"></i></a></li>
 
   <% end %>
 </ul>
