--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div><%= f.label :email %>
     <%= f.email_field :email, autofocus: true %></div>
 
-  <div><%= f.label :name %>
+  <div><%= f.label :name, "First Name" %>
     <%= f.text_field :name %> </div>
  
   <div><%= f.label :last_name %>
