--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,8 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Area</th>
+      <th>Price Sq feet</th>
       <th>Address</th>
       <th colspan="3"></th>
     </tr>
@@ -12,7 +14,9 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= current_user.name %></td>
         <td><%= post.area %></td>
+        <td><%= post.price_sq_ft %></td>
         <td><%= post.address %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
