--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -12,14 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :full_name %><br>
+    <%= f.label :full_name %>
     <%= f.text_field :full_name %>
   </div>
   <div class="field">
-    <%= f.label :card_number %><br>
+    <%= f.label :card_number %>
     <%= f.number_field :card_number %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"btn btn-primary" %>
+    
   </div>
 <% end %>
