--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
     });
     
   </script>
-
+<%= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
 <%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
