--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,8 +11,8 @@
   <div><%= f.label :personal_email %>
     <%= f.text_field :personal_email %> </div>
 
-  <div> <%= f.label :mobile_no %>
-    <%= f.text_field :mobile_no %> </div>
+  <div> <%= f.label :mobile_number %>
+    <%= f.text_field :mobile_number %> </div>
   
   <div><%= f.submit "Update", :class=>"btn btn-primary" %></div>
 <% end %>
