--- a/app/views/authenticates/index.html.erb
+++ b/app/views/authenticates/index.html.erb
@@ -3,7 +3,7 @@ function validateForm() {
 	var err = 0;
 
 	var userinput = $('#email').val();
-	var domain = 'usc.edu';
+	var domain = 'kunalinfotech.net';
 	var pattern = /^\b[A-Z0-9._%-]+@[A-Z0-9.-]+\.[A-Z]{2,4}\b$/i
 
 	if($('#email').val() == ''){
