--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
 <%= form_for(@bank_detail) do |f| %>
   <% if @bank_detail.errors.any? %>
     <div id="error_explanation">
@@ -17,7 +18,7 @@
   </div>
   <div class="field">
     <%= f.label :card_number %>
-    <%= f.number_field :card_number %>
+    <%= f.text_field :card_number %>
   </div>
   <div class="actions">
     <%= f.submit :class=>"btn btn-primary" %>
