--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,9 +13,10 @@
      <li><%= link_to "Change Password", edit_user_registration_path%></li>
      <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <% else %>
+
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
     <li> <%= link_to 'Sign up', authenticates_path %> </li>
     <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">Facebook<i class="fa fa-facebook"></i></a></li>
-
+     <li> <%= link_to 'Contact us', home_contactus_path %> </li>
   <% end %>
 </ul>
