--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<%= form_for @user, :url => user_path(@user), html: { method: :put } do |f|%>
+<%= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
+
+<%= form_for @user, :url => user_path(@user), html: { method: :put, id: "edit_user" } do |f|%>
   <div><%= f.label :email %>
-    <%= f.email_field :email, autofocus: true %></div>
+    <%= f.email_field :email, :readonly => true %></div>
 
   <div><%= f.label :name, "First Name" %>
     <%= f.text_field :name %> </div>
