--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,6 +29,13 @@
     <%= f.label :mobile_number %>
     <%= f.text_field :mobile_number %>
   </div>
+
+  <div>
+    <input type="checkbox" id="termsConditions" name="termsConditions"/> I agree to the <a href="/terms" target="_blank">terms and conditions</a>
+<label style="float: none;" for="termsConditions" class="error" generated="true"></label> <br/><br/>
+  </div>
+
+
   <div><%= f.submit "Sign up", :class=>"btn btn-primary" %></div>
 <% end %>
 
