--- a/app/views/contactus_mailer/contactus.html.erb
+++ b/app/views/contactus_mailer/contactus.html.erb
@@ -1,5 +1,8 @@
-<h1>ContactusMailer#contactus</h1>
-
 <p>
-  <%= @greeting %>, find me in app/views/contactus_mailer/contactus.html.erb
+  <%= @greeting %>
 </p>
+
+<%=@contactus.name%>
+<%=@contactus.email%>
+<%=@contactus.subject%>
+<%=@contactus.message%>
