--- a/app/views/contactus_mailer/contactus.text.erb
+++ b/app/views/contactus_mailer/contactus.text.erb
@@ -1,3 +1,8 @@
-ContactusMailer#contactus
+<p>
+  <%= @greeting %>
+</p>
 
-<%= @greeting %>, find me in app/views/contactus_mailer/contactus.text.erb
+<%=@contactus.name%>
+<%=@contactus.email%>
+<%=@contactus.subject%>
+<%=@contactus.message%>
