--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<%= form_for @user, :url => user_path(@user), html: { method: :put } do |f|%>
+<%= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
+
+<%= form_for @user, :url => user_path(@user), html: { method: :put, id: "edit_user" } do |f|%>
   <div><%= f.label :email %>
-    <%= f.email_field :email, autofocus: true %></div>
+    <%= f.email_field :email, :readonly => true %></div>
 
   <div><%= f.label :name, "First Name" %>
     <%= f.text_field :name %> </div>
@@ -11,8 +13,8 @@
   <div><%= f.label :personal_email %>
     <%= f.text_field :personal_email %> </div>
 
-  <div> <%= f.label :mobile_no %>
-    <%= f.text_field :mobile_no %> </div>
+  <div> <%= f.label :mobile_number %>
+    <%= f.text_field :mobile_number %> </div>
   
   <div><%= f.submit "Update", :class=>"btn btn-primary" %></div>
 <% end %>
