--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,7 @@
  
   <% if user_signed_in? && signed_in? && current_user.admin?  %>
     <li><%= link_to "Users", root_path%></li>
+
     <li><%= link_to "Pages", pages_path%></li>
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <%# end %>
@@ -12,6 +13,7 @@
   	<li> <%= link_to 'My Post', posts_path %> </li>
     <li><%= link_to "Personal Information", edit_user_path(current_user)%></li>
      <li><%= link_to "Change Password", edit_user_registration_path%></li>
+     <li><%= link_to "Bank Details", bank_details_path%></li>
      <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <% else %>
 
