--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,7 +12,22 @@
       $("#post_drop_off_avaibility_end_date").datepicker({dateFormat: 'dd/mm/yy'})
     });
     
+    $(document).ready(function(){
+        $('input[type="checkbox"]').click(function(){
+            if($(this).attr("id")=="post_pick_up"){
+                $(".post_pick_up").toggle();
+            }
+            if($(this).attr("id")=="post_drop_off"){
+                $(".post_drop_off").toggle();
+            }
+            
+        });
+    });
+
   </script>
+
+
+
 <%= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
 <%= form_for(@post) do |f| %>
   <% if @post.errors.any? %>
@@ -36,24 +51,28 @@
   </div>
 
   <div class="field">
-    <%= f.label :price_include_pick_up %>
+    <%= f.check_box :pick_up %> Pick Up <%= f.check_box :drop_off %> Drop Off <br/><br/>
+  </div>
+
+  <div class="field post_pick_up" <% if @post.pick_up == true %> <% else %> style="display: none;" <% end %>>
+    <%= f.label :price_include_pick_up, "Pick up Price"%>
     <%= f.text_field :price_include_pick_up %>
   </div>
 
-  <div class="field">
-    <%= f.label :price_include_drop_off %>
+  <div class="field post_drop_off" <% if @post.drop_off == true %> <% else %> style="display: none;" <% end %>>
+    <%= f.label :price_include_drop_off, "Drop off Price" %>
     <%= f.text_field :price_include_drop_off %>
   </div>
+
 
   <div class="field">
     <%= f.label :pick_up_avaibilty_start_date %>
     <%= f.date_field :pick_up_avaibilty_start_date %>
-  </div>
 
-  <div class="field">
     <%= f.label :pick_up_avaibility_end_date %>
     <%= f.date_field :pick_up_avaibility_end_date %>
   </div>
+
 
   <div class="field">
     <%= f.label :drop_off_avaibility_start_date %>
@@ -85,5 +104,11 @@
 
   <div class="actions">
     <%= f.submit :class=>"btn btn-primary" %>
+
+    <% if @post.id %>
+      &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Deactive Post', toggle_post_path(@post.id), :class=>"btn btn-primary" %>
+      &nbsp;&nbsp;&nbsp;&nbsp; <%= link_to 'Delete Post', post_path(@post.id), method: :delete, data: { confirm: 'Are you sure?' }, :class=>"btn btn-primary" %>
+      
+    <% end %>
   </div>
 <% end %>
