--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= post.area %></td>
         <td></td>
         <td><%= post.address %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'View Details', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
