--- a/app/views/authenticates/index.html.erb
+++ b/app/views/authenticates/index.html.erb
@@ -18,20 +18,22 @@ function validateForm() {
 	}
 
 	if(err == 0){
-            //$(".rhino-active-bullet").removeClass("step-error").addClass("step-success");
+            
              return true;      
     }else{
-            //$(".rhino-active-bullet").removeClass("step-success").addClass("step-error");
+            
             return false;
     }
 
 }
 </script>
 
+<%#= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
+
 <div class="dragonContent">
  	<div class="dialog-content">
 
-    <%= form_tag url_for(:controller => 'authenticates', :action => 'create'), :method => 'post', :onsubmit => "return validateForm()" do |f| %>
+    <%= form_tag url_for(:controller => 'authenticates', :action => 'create'), :method => 'post', :id=>"userSignup", :onsubmit => "return validateForm()" do |f| %>
 	    <%= label_tag :email %>
       <%= text_field_tag :email %>
       <div class="form-error"></div>
