--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,7 +29,7 @@
 
 
 <%= javascript_include_tag "jquery-1.5.2.min","jquery.validate.min","validation" %>
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, :html=>{ id: "new_post"}) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <ul>
