Contact us email id updated

--- a/app/views/contactus_mailer/contactus.html.erb
+++ b/app/views/contactus_mailer/contactus.html.erb
@@ -2,7 +2,7 @@
   <%= @greeting %>
 </p>
 
-<%=@contactus.name%>
-<%=@contactus.email%>
-<%=@contactus.subject%>
-<%=@contactus.message%>
+<p><%=@contactus.name%></p>
+<p><%=@contactus.email%></p>
+<p><%=@contactus.subject%></p>
+<p><%=@contactus.message%></p>
