--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div>
     <%= f.label :mobile_number %>
-    <%= f.text_field :mobile_number %>
+    <%= f.text_field :mobile_number, placeholder:"xxx xxx-xxxx" %>
   </div>
 
   <div>
