--- a/app/views/bank_details/index.html.erb
+++ b/app/views/bank_details/index.html.erb
@@ -13,7 +13,7 @@
     <% @bank_details.each do |bank_detail| %>
       <tr>
         <td><%= bank_detail.full_name %></td>
-        <td><%= bank_detail.card_number %></td>
+        <td>******<%= bank_detail.card_number[-4..-1] %></td>
         <td><%= link_to 'Edit', edit_bank_detail_path(bank_detail) %></td>
         <td><%= link_to 'Destroy', bank_detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
