--- a/app/views/posts/archive.html.erb
+++ b/app/views/posts/archive.html.erb
@@ -12,7 +12,7 @@
       <th>Area (Sq ft)</th>
       <th>Price (Sq ft)</th>
       <th>Address</th>
-      <th>Action</th>
+      <!-- <th>Action</th> -->
     </tr>
   </thead>
 
@@ -25,7 +25,7 @@
         <td><%= post.area %></td>
         <td>$<%= post.price_sq_ft %></td>
         <td><%= post.address %></td>
-        <td><%= link_to 'View Details', edit_post_path(post) %></td>
+        <!-- <td><%= link_to 'View Details', edit_post_path(post) %></td> -->
         
       </tr>
     <% end %>
