--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,8 @@
       <th>Area (Sq ft)</th>
       <th>Price (Sq ft)</th>
       <th>Address</th>
-      <th colspan="3">Action</th>
+      <th>Status</th>
+      <th>Action</th>
     </tr>
   </thead>
 
@@ -24,7 +25,7 @@
         <td><%= post.area %></td>
         <td>$<%= post.price_sq_ft %></td>
         <td><%= post.address %></td>
-        <td><%= link_to format_boolean(post.status?), toggle_post_path(post) %></td>
+        <td><% if post.status == true %> Active <% else %> Inactive <% end %></td>
         <td><%= link_to 'View Details', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
