--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= post.area %></td>
         <td>$<%= post.price_sq_ft %></td>
         <td><%= post.address %></td>
-        <td><% if post.status == true %> Active <% else %> Inactive <% end %></td>
+        <td><% if post.status == true %> Active <% else %> Deactive <% end %></td>
         <td><%= link_to 'View Details', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
