--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,18 +1,17 @@
 
 
-
   <script type="text/javascript">
     jQuery(function($){
-      $("#post_pick_up_avaibilty_start_date").datepicker({dateFormat: 'dd/mm/yy',changeMonth: false,changeYear: false, minDate: 0})
+      $("#post_pick_up_avaibilty_start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0})
     });
     jQuery(function($){
-      $("#post_pick_up_avaibility_end_date").datepicker({dateFormat: 'dd/mm/yy',changeMonth: false,changeYear: false, minDate: 0})
+      $("#post_pick_up_avaibility_end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0})
     });
     jQuery(function($){
-      $("#post_drop_off_avaibility_start_date").datepicker({dateFormat: 'dd/mm/yy',changeMonth: false,changeYear: false, minDate: 0})
+      $("#post_drop_off_avaibility_start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0})
     });
     jQuery(function($){
-      $("#post_drop_off_avaibility_end_date").datepicker({dateFormat: 'dd/mm/yy',changeMonth: false,changeYear: false, minDate: 0})
+      $("#post_drop_off_avaibility_end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, minDate: 0})
     });
     
     $(document).ready(function(){
@@ -49,7 +48,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :price_sq_ft %>
+    <%= f.label :price_sq_ft, "Price square feet" %>
     <%= f.text_field :price_sq_ft %>
   </div>
 
