--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -48,7 +48,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :price_sq_ft, "Price square feet" %>
+    <%= f.label :price_sq_ft, "Price per square feet" %>
     <%= f.text_field :price_sq_ft %>
   </div>
 
