--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,9 +11,12 @@
   <%# end %>
   <% elsif user_signed_in? %>
   	<li> <%= link_to 'My Post', posts_path %> </li>
+    <li><%= link_to "All Posts", all_posts_path %></li>
     <li><%= link_to "Personal Information", edit_user_path(current_user)%></li>
      <li><%= link_to "Change Password", edit_user_registration_path%></li>
      <li><%= link_to "Bank Details", bank_details_path%></li>
+ 
+ 
      <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <% else %>
 
