--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,6 +18,7 @@
   To <br/>
 
   <%= f.text_field :recipient_id,:value =>post_user_id,:readonly => true,:class => "pe_tf" %>
+  <%#= hidden_field_tag :post_id,@message.id %>
 
 </div>
   <div class="row">
