--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,4 +1,4 @@
-<% if @post.blank? %>
+<% if @posts.blank? %>
 
 No Results found!!
 <%else%>
@@ -16,7 +16,7 @@ No Results found!!
   </thead>
 
   <tbody>
-    <% @post.each_with_index do |post, index| %>
+    <% @posts.each_with_index do |post, index| %>
       <tr>
         <td><%= index + 1 %></td>
         <td><%= post.id %></td>
@@ -30,3 +30,5 @@ No Results found!!
   </tbody>
 </table>
 <%end%>
+
+<%= will_paginate @posts %>
